--- a/development/kindergarten_roster_management/www/assets/ratchet/css/ratchet.css
+++ b/development/kindergarten_roster_management/www/assets/ratchet/css/ratchet.css
@@ -331,13 +331,16 @@ h1, .h1 {
 h2, .h2 {
   font-size: 300px;
   position: relative;
-  top: 200px;
-  left: 140px;
+  top: 150px;
+  left: 30px;
 
 }
 
 h3, .h3 {
   font-size: 24px;
+position: relative;
+  top: 100px;
+  left: 30px;
 }
 
 h4, .h4 {
