--- a/development/kindergarten_roster_management/www/assets/ratchet/css/ratchet.css
+++ b/development/kindergarten_roster_management/www/assets/ratchet/css/ratchet.css
@@ -17,6 +17,7 @@ html {
 
 body {
   margin: 0;
+background-color: #ffffff;
 }
 
 article,
@@ -332,16 +333,16 @@ h1, .h1 {
 h2, .h2 {
   font-size: 300px;
   position: relative;
-  top: 110px;
-  left: 30px;
+  top: 240px;
+  left: 32px;
 
 }
 
 h3, .h3 {
-  font-size: 24px;
+  font-size: 300px;
 position: relative;
-  top: 100px;
-  left: 30px;
+  top: 180px;
+  left: 80px;
 }
 
 h4, .h4 {
